src/raml1/test/data/TCK/raml-0.8/InvalidIncludeTags/test004/api.raml

#%RAML 0.8
title: test API

/resource:
  get:
    responses: ./responses.raml
